refactor: changed manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Анна Маминова",
+  "name": "Сайт Анны Маминовой",
   "icons": [
     {
       "src": "favicon.ico",
